# city_car

./: .pre-commit-config.yaml  README.rst  format.sh  map.json  pyproject.toml
assets/maps/: map1.json
city_car/: application.py  first_version.py  game_engine.py  main.py  models.py
city_car/builder/: map_builder.py
city_car/configs/: __init__.py  constants.py  folders.py
city_car/core/: __init__.py  car_keys_params.py  colors.py  game_engine.py  overlay.py  ui_state.py
city_car/models/: __init__.py  car.py  collidable.py  drawable.py  entity.py  environment.py  movable.py  obstacle.py  position.py  street_tile.py  vector.py
tests/: test_city_car.py
