[tool.poetry]
name = "city_car"
version = "0.1.0"
description = ""
authors = ["Danilo Catone <danilocatone@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.6.1"
numpy = "^2.1.2"
isort = "^5.13.2"
black = "^24.10.0"
pydantic = "^2.9.2"
pygame-gui = "^0.6.12"
lineno = "^0.3.0"
pytest = "^8.3.3"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
