[tool.poetry]
name = "city_car"
version = "0.1.0"
description = ""
authors = ["Danilo Catone <danilocatone@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"
isort = "^5.13.2"
black = "^24.10.0"
pydantic = "^2.9.2"
lineno = "^0.3.0"
pytest = "^8.3.3"
pygame = "^2.6.1"
pygame-gui = "^0.6.12"

[tool.poetry.dev-dependencies]
ruff = "^0.7.2"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
